# fluexy-layerd

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/api/: README.md  app.py  grouping.py  pyproject.toml
apps/web/: .env.example  components.json  next.config.ts  package.json  tsconfig.json
apps/web/public/prompts/: alternating-sides.md  bottom-up.md  center-out.md  domino.md  left-to-right.md  radial-burst.md  slow-cinematic.md  spiral.md
apps/web/src/: index.css  proxy.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/ai/: page.tsx
apps/web/src/app/api/ai/: route.ts
apps/web/src/app/api/convert/: route.ts
apps/web/src/app/api/projects/: route.ts
apps/web/src/app/api/projects/[id]/: route.ts
apps/web/src/app/api/render/: route.ts
apps/web/src/app/history/: page.tsx
apps/web/src/components/: header.tsx  mode-toggle.tsx  providers.tsx
apps/web/src/components/motion-studio/: delete-project-button.tsx  preset-select.tsx  source-image-panel.tsx  studio-actions.tsx  studio-header.tsx  video-preview-panel.tsx
apps/web/src/hooks/: use-motion-studio.ts
apps/web/src/lib/: grouping.ts
apps/web/src/remotion/: layered-video.tsx  motion.ts  presets.ts  root.tsx  types.ts
